ueye-nativelib/trunk/src/main/include/uEye.h



// ----------------------------------------------------------------------------
// Error codes
// ----------------------------------------------------------------------------
#define IS_NO_SUCCESS                        -1   // function call failed
#define IS_SUCCESS                            0   // function call succeeded

        typedef int32_t           INT;


        typedef void*             HWND;

typedef int     INT;
  typedef TCHAR IS_CHAR;
  typedef char IS_CHAR;


// ----------------------------------------------------------------------------
// Typedefs
// ----------------------------------------------------------------------------
typedef DWORD   HIDS;


  IDSEXP   is_AllocImageMem          (HIDS hf, INT width, INT height, INT bitspixel, char** ppcImgMem, int* pid);

  IDSEXP   is_SetImageMem            (HIDS hf, char* pcMem, int id);

  IDSEXP   is_GetActiveImageMem      (HIDS hf, char** ppcMem, int* pnID);



  // Camera functions
  IDSEXP is_InitCamera                  (HIDS* phf, HWND hWnd);

  IDSEXP is_LoadParameters              (HIDS hf, const IS_CHAR* pFilename);